lib/src/compiler/tests/testdata/errors/86.out
error[E001]: syntax error
 --> line:3:13
  |
3 |   $a = { 01 ~0 11 }
  |             ^ expecting `[`, BYTE, `(` or `}`, found `~`
  |